updating container space for About section to prevent overlap btwn About and Teams sections.

--- a/Challenges/Challenge06/css/styles.css
+++ b/Challenges/Challenge06/css/styles.css
@@ -33,7 +33,7 @@ img {
 }
 
 .about-container {
-  height: 115vh;
+  height: 135vh;
   background-color: var(--background-color);
 }
 
@@ -107,7 +107,7 @@ img {
 }
 
 .about-container {
-  height: 115vh;
+  height: 130vh;
   background-color: var(--background-color);
 }
 
